# Dataiku_GenAI

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.agents/skills/recipe-patterns/: SKILL.md
.agents/skills/recipe-patterns/references/: group-recipe.md  python-recipe.md
.claude/skills/recipe-patterns/references/: prepare-recipe.md  sync-recipe.md
chatbot/: .dockerignore  .env.example  .gitignore  DEPLOYMENT-SUMMARY.md  DOCKER-QUICKSTART.md  DOCKER.md  Dockerfile  HELM.md  Makefile  QUICKSTART.md  README.md  app.py  docker-compose.yml  requirements.txt  start.bat  start.sh
chatbot/helm/dataiku-chatbot/: Chart.yaml  values.yaml
chatbot/helm/dataiku-chatbot/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
chatbot/src/: __init__.py  chat_handler.py  dataiku_connector.py  prompts.py  workflow_builder.py
data/samples/: example_response.json
notebooks/: exploration.py
scripts/: demo.py  rotate_api_key.py
src/: __init__.py
src/api/: __init__.py  client.py  datasets.py  projects.py
src/recipes/: __init__.py  generator.py
src/utils/: __init__.py  logger.py
tests/: test_connection.py
